API/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protected-nginx
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://login-node-service.default.svc.cluster.local/verify
    nginx.ingress.kubernetes.io/auth-signin: /login
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  tls:
    - hosts:
        - kubernetes.docker.internal
      secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-node-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unprotected-nginx
  annotations:
    # nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  tls:
    - hosts:
        - kubernetes.docker.internal
      secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /login
            pathType: Exact
            backend:
              service:
                name: login-node-service
                port:
                  number: 80
          - path: /signup
            pathType: Exact
            backend:
              service:
                name: login-node-service
                port:
                  number: 80
